[package]
name = "localtrace"
version = "0.1.6"
edition = "2021"
authors = ["ysuzuki19"]
repository = "https://github.com/ysuzuki19/localtrace"
license = "MPL-2.0"
description = "A local tracing library for Rust"
readme = "README.md"
keywords = ["error", "tracing", "backtrace", "debugging", "local"]
exclude = [".github", ".gitignore"]

[dependencies]
backtrace = "0.3.75"


[workspace]
members = ["example"]
