[package]
name = "example"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "main_ok"
path = "src/main_ok.rs"

[[bin]]
name = "main_err"
path = "src/main_err.rs"

[[bin]]
name = "readme_quickstart"
path = "src/readme_quickstart.rs"

[[bin]]
name = "from_anyhow"
path = "src/from_anyhow.rs"

[dependencies]
localtrace = { path = "..", features = ["anyhow"] }
anyhow = "1.0"
